welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: not enough arguments for method faireFleur: (c: java.awt.Color)Unit.
Unspecified value parameter c.
faireFleur()
          ^